Footer fixed: does not overlap now

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -4,8 +4,8 @@
   background-color: #333;
   color: #fff;
   padding: 20px 0;
-  position: fixed;
-  bottom: 0;
+  /* position: fixed;
+  bottom: 0; */
   width: 100%;
 }
 
